version/2025.1/_sources/index.rst.txt
PyGranta |version|
##################

Welcome to the PyGranta project. This page lists the PyAnsys packages
that provide integration with Granta MI services.

.. toctree::
   :hidden:
   :maxdepth: 3

   getting_started
   user_guide
   api
   examples
   package_versions

.. grid:: 3

    .. grid-item-card:: PyGranta BoM Analytics :material-regular:`science` :material-regular:`eco`
      :link: https://bomanalytics.grantami.docs.pyansys.com/
      :class-title: pyansys-card-title

      Sustainability and restricted substance analysis.

    .. grid-item-card:: PyGranta RecordLists :material-regular:`list`
      :link: https://recordlists.grantami.docs.pyansys.com/
      :class-title: pyansys-card-title

      Manage favorite Granta MI materials in Python as record lists.

    .. grid-item-card:: PyGranta JobQueue :material-regular:`work_history`
      :link: https://jobqueue.grantami.docs.pyansys.com/
      :class-title: pyansys-card-title

      Import and export text and Excel data with Python asynchronously.
